third_party/move/tools/move-package-manifest/tests/basic/duplicate_authors.exp
error: failed to parse manifest
  |
1 | [package]
2 | name = "some_package_name"
3 | version = "0.1.2"
4 | authors = ["alice", "bob", "alice"]
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate entry: alice
  |
